--- a/static/css/base.css
+++ b/static/css/base.css
@@ -325,12 +325,14 @@ header,
 
 .error h1 {
     position: absolute;
-    top: 50%
+    top: 30%;
+    left: 10%;
 }
 
 .error a {
     position: absolute;
-    top: 60%
+    top: 50%;
+    left: 10%;
 }
 
 /**********************500.html*/
@@ -343,12 +345,14 @@ header,
 
 .error-500 h1 {
     position: absolute;
-    top: 50%
+    top: 30%;
+    left: 10%;
 }
 
 .error-500 a {
     position: absolute;
-    top: 60%
+    top: 50%;
+    left: 10%;
 }
 
 /**********************View Availability*/
