--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,16 +16,16 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://cdn.pixabay.com/photo/2017/05/20/21/03/catamaran-2329770_1280.jpg"
+                            <img src="{{ MEDIA_URL }}media/catamaran.png"
                                 class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://cdn.pixabay.com/photo/2016/01/14/11/50/gozo-1139812_1280.jpg"
+                            <img src="{{ MEDIA_URL }}media/gozo.png"
                                 class="d-block w-100 carousel-img" alt="gozo island">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://cdn.pixabay.com/photo/2021/01/24/19/41/boats-5946304_1280.jpg"
-                                class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
+                            <img src="{{ MEDIA_URL }}media/maltese-boats.png"
+                                class="d-block w-100 carousel-img" alt="traditional maltese boats">
                         </div>
                     </div>
                 </div>
