Added a direct link to datepicker.js file which was causing issues during testing

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -380,7 +380,9 @@
 {% endblock %}
 
 {% block postloadjs %}
+     {{ blocksuper }}
 
      <script src="{% static 'trips/js/modal.js' %}"></script>
+     <script src="{% static 'js/datepicker.js' %}"></script>
 
 {% endblock %}
