Added meta content

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,14 @@
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="discover availalbe trips in Malta, view user reviews and purchase tickets">
+    <meta name="keywords" content="Malta, holidays, trips, rating, reviews, advantures, things to do in Malta">
+    <meta name="author" content="Marina Shalneva">
     {% endblock %}
 
     {% block extra_meta %}
+
     {% endblock %}
 
     {% block corecss %}
