Updated a url on line 73

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -70,7 +70,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{% url 'search' %}?sort=reviewrating&direction=desc">
+                            <a class="dropdown-item" href="{% url 'sort_rating' %}">
                                 By Rating
                             </a>
                         </li>
