--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -223,7 +223,12 @@
                 <h4>Cancellation Policy</h4>
                 <p>You may cancel your trip 24hrs in advance to get a full refund.
                     Any trips cancelled less than 24hrs in advance will not qualify for a refund.
+                    If you would like to find out more information or you need to cancel your purchase. 
                 </p>
+                <p class="d-inline">Please</p>
+                <a class="btn d-inline btn-dropdown" href="{% url 'contact' %}">
+                    <strong>Get In Touch</strong>
+                </a>
             </div>
         </div>
         <!--Delete/Update Trip-->
