Added a background colour to and opacity to btn-sold

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -232,6 +232,12 @@ header,
     z-index: 1;
 }
 
+.btn-sold {
+    position: absolute;
+    background-color: #000000;
+    opacity: 1 !important;
+}
+
 .btn-favourite {
     position: absolute;
 }
