Added a custom class on line 120

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -117,7 +117,7 @@
                 </ul>
             </div>
             {% if trip.num_tickets == 0 %}
-            <button type="button" class="btn btn-md btn-next btn-book" disabled>
+            <button type="button" class="btn btn-md btn-next btn-book btn-sold" disabled>
                 Sold Out
             </button>
             {% else %}
