Increased the width of the input field on the tablet and mobile screen view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -697,5 +697,11 @@ footer {
         position: unset;
         width: 100%;
     }
+    
+    #children_tickets,
+    #total_adults {
+        width: 5rem;
+        border: 1px solid #000000;
+    }
 
 }
