--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -47,13 +47,13 @@
                 <h4>Price :</h4>
                 <p class="my-0"><i class="fas fa-euro-sign" aria-hidden="true"></i>
                     <span class="sr-only">euro</span>
-                    {{ item.adult_price }} <strong>Adults</strong>
+                    {{ item.adult_price }}
                 </p>
                 <!--check if there are any children tickets-->
                 {% if item.trip.family_friendly %}
                 <p class="my-0 mt-2"><i class="fas fa-euro-sign" aria-hidden="true"></i>
                     <span class="sr-only">euro</span>
-                    {{ item.child_price }} <strong>Children</strong>
+                    {{ item.child_price }}
                 </p>
                 {% endif %}
             </div>
