Added a site domain at the bottom of the email

--- a/accounts/templates/accounts/emails/account_activation.html
+++ b/accounts/templates/accounts/emails/account_activation.html
@@ -9,5 +9,6 @@ https://{{domain}}{% url 'activate' uidb64=uid token=token %}
 Best Wishes,
 
 Team @ Discover Malta
+{{domain}}
 
 {% endautoescape %}
