--- a/accounts/templates/accounts/emails/reset_password_email.html
+++ b/accounts/templates/accounts/emails/reset_password_email.html
@@ -10,5 +10,6 @@ https://{{domain}}{% url 'validate_new_password' uidb64=uid token=token %}
 Best Wishes,
 
 Team @ Discover Malta
+{{domain}}
 
 {% endautoescape %}
