Added phone number validation error field

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -38,6 +38,7 @@
               <div class="col-md-6">
                 <label for="id_phone_number" class="form-label">Phone Number:</label>
                 {{ user_form.phone_number }}
+                {{ user_form.phone_number.errors }}
               </div>
               <div class="form-row col-12">
                 <label for="id_street_address1" class="form-label">Street Address 1:</label>
