Centered the <h2> element

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -7,7 +7,7 @@
 <section class="main-content">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-auto mt-3">
+            <div class="col text-center mt-3">
                 <h2>{{ user.first_name|capfirst }} Edit Your Profile</h2>
             </div>
         </div>
