--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -7,7 +7,7 @@
 <section class="main-content">
     <div class="container">
         <div class="row">
-            <div class="col-md-auto mt-3 text-center">
+            <div class="col mt-3 text-center">
                 <h2>Welcome {{ user.first_name|capfirst }} to your profile page!</h2>
             </div>
         </div>
