--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -96,7 +96,7 @@
                   </div>
                   <div class="form-row d-flex justify-content-center">
                     <div class="col-md-4 col-sm-12">
-                      <a href="{% url 'trips' %}" class="btn btn-dropdown cancel-btn">
+                      <a href="{% url 'profile' %}" class="btn btn-dropdown cancel-btn">
                         <span class="icon">
                           <i class="fas fa-times" aria-hidden="true"></i>
                         </span>
