Adjusted the positioning of the button and h1 element on the 500.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -650,9 +650,14 @@ footer {
         display: none;
     }
 
-    .erro-500 a {
-        left: 15%;
+    .error-500 a {
+        left: 15% !important;
     }
+
+    .error-500 h1 {
+        left: 0;
+    }
+
 
     .btn-checkout-mobile {
         position: fixed;
