Added media queries for review-form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -658,6 +658,11 @@ footer {
         left: 0;
     }
 
+    #review-form {
+        width: auto;
+        margin: 1rem auto;
+    }
+
 
     .btn-checkout-mobile {
         position: fixed;
