--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <!--Profile Links-->
-        <div class="row">
+        <div class="row m-1">
             <div class="col-md-4 col-sm-12 text-center">
                 <a class="btn btn-dropdown w-100" href="#order-history">View Order History</a>
             </div>
