Added a custom class to all the star labels, which ensures css only targets current labels

--- a/accounts/templates/accounts/edit_review.html
+++ b/accounts/templates/accounts/edit_review.html
@@ -28,27 +28,28 @@
                 </div>
                 <p>Update this trip rating</p>
                 <!--Star Rating-->
+                <!--Star Rating-->
                 <fieldset class="rating">
                     <input type="radio" id="rating10" name="rating" value="5" />
-                    <label for="rating10" title="5 stars"></label>
+                    <label for="rating10" class="star-label" title="5 stars"></label>
                     <input type="radio" id="rating9" name="rating" value="4.5" />
-                    <label class="half" for="rating9" title="4.5 stars"></label>
+                    <label class="half star-label" for="rating9" title="4.5 stars"></label>
                     <input type="radio" id="rating8" name="rating" value="4" />
-                    <label for="rating8" title="4 stars"></label>
+                    <label for="rating8" class="star-label" title="4 stars"></label>
                     <input type="radio" id="rating7" name="rating" value="3.5" />
-                    <label class="half" for="rating7" title="3.5 stars"></label>
+                    <label class="half star-label" for="rating7" title="3.5 stars"></label>
                     <input type="radio" id="rating6" name="rating" value="3" />
-                    <label for="rating6" title="3 stars"></label>
+                    <label for="rating6" class="star-label" title="3 stars"></label>
                     <input type="radio" id="rating5" name="rating" value="2.5" />
-                    <label class="half" for="rating5" title="2.5 stars"></label>
+                    <label class="half star-label" for="rating5" title="2.5 stars"></label>
                     <input type="radio" id="rating4" name="rating" value="2" />
-                    <label for="rating4" title="2 stars"></label>
+                    <label for="rating4" class="star-label" title="2 stars"></label>
                     <input type="radio" id="rating3" name="rating" value="1.5" />
-                    <label class="half" for="rating3" title="1.5 stars"></label>
+                    <label class="half star-label" for="rating3" title="1.5 stars"></label>
                     <input type="radio" id="rating2" name="rating" value="1" />
-                    <label for="rating2" title="1 star"></label>
-                    <input type="radio" id="rating1" name="rating" value="0.5" required/>
-                    <label class="half" for="rating1" title="0.5 star"></label>
+                    <label for="rating2" class="star-label" title="1 star"></label>
+                    <input type="radio" id="rating1" name="rating" value="0.5" required />
+                    <label class="half star-label" for="rating1" title="0.5 star"></label>
                 </fieldset>
                  <!--Review Subject-->
                 <div class="col">
