Divided the page into sections

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container mt-0">
+    <div class="container-fluid m-0 p-0">
         <div class="row">
             <div class="col">
                 <!---carousel-->
@@ -31,6 +31,10 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <div class="container mt-0">
         <!--heading-->
         <div class="row spacing">
             <div class="col-s12">
@@ -43,6 +47,10 @@
                 </p>
             </div>
         </div>
+    </div>
+</section>
+<section class="testimony">
+    <div class="container">
         <!--Testimony-->
         <div class="row">
             <div class="col">
@@ -94,6 +102,10 @@
                 </p>
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <div class="container">
         <!--Category Display-->
         <div class="row spacing">
             <div class="col">
