--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -4,13 +4,18 @@
 }
 
 .carousel-img {
-    height: 40rem;
+    height: 45rem;
     width: auto;
     object-fit: cover;
 }
 
 
 /**********Testimony Cards*****************/
+
+.testimony {
+    background-color: rgba(97, 95, 95, 0.9);
+    color: #fafafa;
+}
 
 .card-info {
     border-radius: 50%;
@@ -22,7 +27,7 @@
     margin: 2rem;
     font-size: 20px;
     font-family: 'Acme', sans-serif;
-    border: 2px solid rgba(0, 0, 0, .125);
+    border: 2px solid #fafafa;
     box-shadow: -3px 8px 27px -2px rgba(180, 179, 179, 0.51);
     display: none;
 
@@ -35,7 +40,7 @@
     left: -15px;
     right: -15px;
     bottom: -15px;
-    border: 2px solid rgba(0, 0, 0, .425);
+    border: 2px solid #fafafa;
     border-radius: 50%;
 }
 
