Divided document into sections

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -45,6 +45,10 @@
                 <img src="{{ trip.images.url }}" class="card-img-top" alt="{{ trip.name }}">
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <div class="container mt-0">
         <!--Trip Details-->
         <div class="row mt-2">
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -245,9 +249,13 @@
             </div>
         </div>
         {% endif %}
+    </div>
+</section>
+<section>
+    <div class="container">
         {% if user.is_authenticated %}
         <div class="row m-1">
-            <!--User Reviews-->
+            <!--Review Form-->
             <form action="{% url 'submit_review' trip.id  user.id %}" method="POST"
                 class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12 login-form" id="review-form">
                 {% csrf_token %}
@@ -297,12 +305,17 @@
         {% else %}
         <hr>
         <div class="row spacing">
-            <div class="col-">
+            <div class="col mb-1">
                 <h4 class="d-md-inline"> Have you been on this trip? Please rate your experience</h4>
                 <a class="btn btn-dropdown d-md-inline" href="{% url 'login' %}">Login</a>
             </div>
         </div>
         {% endif %}
+    </div>
+</section>
+<section>
+    <!--User Reviews-->
+    <div class="container mt-0">
         <div class="row spacing">
             <div class="col text-center">
                 <h3 class="text-center">Customer Reviews</h3>
