--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -88,6 +88,10 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <div class="container">
         <!--display all the trips-->
         <div class="row">
             <div class="col">
@@ -209,6 +213,10 @@
             </div>
             {% endfor %}
         </div>
+    </div>
+</section>
+<section>
+    <div class="container">
         <!--Pagination-->
         <div class="row mt-3">
             <div class="col">
