Divided document into sections

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -70,6 +70,10 @@
         </div>
         <hr>
         {% endfor %}
+    </div>
+</section>
+<section>
+    <div class="container">
         <!--Order Form-->
         <div class="row justify-content-md-center mt-4 mb-2">
             <div class="col-lg-8 col-md-8 col-sm-12 text-center">
